utilise page breaks to quash spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,11 +20,7 @@
 
 
 
-/* .container1{
-  
-}
-
-
+/* 
 .openerText{
   display: flex;
   justify-content: center;
